--- a/app/src/main/res/layout/habit_listitem.xml
+++ b/app/src/main/res/layout/habit_listitem.xml
@@ -42,7 +42,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/icon_aieplane"
+        android:src="@mipmap/icon_plane"
         android:layout_marginTop="48dp"
         android:layout_marginLeft="27dp"/>
     <TextView
