--- a/app/src/main/res/layout/fragment_add_reward.xml
+++ b/app/src/main/res/layout/fragment_add_reward.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--创建奖励  XML-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f9f9f9">
-
     <!--状态栏-->
     <ImageView
         android:layout_width="match_parent"
