--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="主界面"
+            android:text="我的习惯"
             android:textSize="21sp"
             android:textColor="#ffffff"
             android:layout_centerInParent="true"/>
@@ -56,7 +56,6 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="18dp"
-                android:text="5日"
                 android:textSize="21sp"
                 android:textColor="#ffffff"/>
             <TextView
@@ -65,7 +64,6 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="44dp"
-                android:text="7月"
                 android:textSize="12sp"
                 android:textColor="#ffffff"/>
 
