--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -3,8 +3,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,6 +24,7 @@
             android:layout_marginTop="63dp"
             android:src="@mipmap/icon_man_1"/>
         <TextView
+            android:id="@+id/tv_my_allIntegral"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="积分：666"
@@ -49,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
                 <TextView
+                    android:id="@+id/tv_my_okTask"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10"
@@ -77,6 +77,7 @@
                 android:layout_weight="1">
 
                 <TextView
+                    android:id="@+id/tv_my_holdDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="99"
@@ -105,6 +106,7 @@
                 android:layout_weight="1">
 
                 <TextView
+                    android:id="@+id/tv_my_allOkNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="655"
