--- a/app/src/main/res/layout/integral_listitem.xml
+++ b/app/src/main/res/layout/integral_listitem.xml
@@ -8,7 +8,8 @@
         android:layout_height="wrap_content"
         android:src="@mipmap/icons_gift"
         android:layout_marginTop="18dp"
-        android:layout_marginLeft="22dp"/>
+        android:layout_marginLeft="22dp"
+        android:id="@+id/imageView" />
     <TextView
         android:id="@+id/IntegralName"
         android:layout_width="wrap_content"
@@ -30,10 +31,12 @@
     <RelativeLayout
         android:layout_width="73dp"
         android:layout_height="33dp"
+        android:id="@+id/redeem_btn"
         android:background="@drawable/integral_corners"
-        android:layout_marginTop="16dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="23dp">
+        android:layout_marginRight="23dp"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="22dp">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
