--- a/app/src/main/res/layout/habit_item_situation.xml
+++ b/app/src/main/res/layout/habit_item_situation.xml
@@ -4,11 +4,18 @@
     android:layout_height="match_parent"
     android:background="#f9f9f9">
 
+    <!--状态栏-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="22dp"
+        android:background="@mipmap/clander_bg_top"
+        android:layout_alignParentTop="true"/>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="58dp"
+        android:layout_height="50dp"
         android:background="#ffffff"
-        android:id="@+id/relativeLayout">
+        android:id="@+id/relativeLayout"
+        android:layout_marginTop="22dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -29,11 +36,13 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/relativeLayout1"
         android:layout_width="wrap_content"
         android:layout_height="136dp"
         android:background="@mipmap/card_1_bg"
         android:layout_below="@+id/relativeLayout"
-        android:layout_alignEnd="@+id/relativeLayout2">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp">
 
         <!--//该图标需要自动去匹配！-->
         <!--<f3.nsu.com.habit.ui.DrawCircle-->
@@ -153,9 +162,10 @@
         android:layout_width="350dp"
         android:layout_height="149dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="207dp"
         android:background="@mipmap/card_2_bg"
-        android:id="@+id/relativeLayout2">
+        android:id="@+id/relativeLayout2"
+        android:layout_below="@id/relativeLayout1"
+        android:layout_marginTop="10dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -203,8 +213,9 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="364dp"
-        android:background="@mipmap/card_3_bg">
+        android:layout_marginTop="10dp"
+        android:background="@mipmap/card_3_bg"
+        android:layout_below="@id/relativeLayout2">
 
         <ImageView
             android:layout_width="wrap_content"
