闹钟服务及广播完成，列表长按点击事件

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,15 @@
             <ImageButton
                 style="@style/BottomBarImgBtn"
                 android:id="@+id/button_home"
-                android:background="@drawable/button_home_state"/>
+                android:background="@drawable/button_home_state"
+                android:padding="10dp"/>
         </RelativeLayout>
         <RelativeLayout style="@style/BottomBar">
             <ImageButton
                 style="@style/BottomBarImgBtn"
                 android:id="@+id/button_pet"
-                android:background="@drawable/button_pet_state"/>
+                android:background="@drawable/button_pet_state"
+                android:padding="10dp"/>
         </RelativeLayout>
 
         <RelativeLayout style="@style/BottomBar">
@@ -39,7 +41,8 @@
             <ImageButton
                 android:id="@+id/button_personal"
                 style="@style/BottomBarImgBtn"
-                android:background="@drawable/button_personal_state"/>
+                android:background="@drawable/button_personal_state"
+                android:padding="10dp"/>
         </RelativeLayout>
 
     </LinearLayout>
