--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -148,6 +148,7 @@
         android:layout_centerHorizontal="true"
         android:overScrollMode="never"
         android:scrollbars="none"
+        android:longClickable="true"
         android:layout_below="@id/expandLayout"
         android:divider="#00000000"
         android:dividerHeight="10dp">
