--- a/app/src/main/res/layout/habit_listitem.xml
+++ b/app/src/main/res/layout/habit_listitem.xml
@@ -24,9 +24,9 @@
         android:layout_marginTop="6dp"
         android:layout_marginLeft="25dp"/>
     <ImageView
+        android:id="@+id/clock_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/icon_clock"
         android:layout_marginLeft="27dp"
         android:layout_marginTop="32dp"/>
     <TextView
